--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,8 +32,9 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         NEW_VERSION: ${{ steps.version.ouputs.version }}
       run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
         echo "New version: $NEW_VERSION!!!!!
+#        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
 #    - name: Build Docker Image
 #      run: |
